# airbyte

./: .gitignore  docker-compose.yaml  notes.md  run-ab-platform-dc-fix.sh  run-ab-platform.sh
airbyte-integrations/connectors/destination-pgvector/: .env.example  .gitignore  README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-pgvector-non-rbac/: .env.example  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml  requirements.txt  setup.py
airbyte-integrations/connectors/destination-pqvector/: README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/source-fireflies-ai/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-fireflies-ai/examples/: config.json  configured_catalog.json
airbyte-integrations/connectors/source-fireflies-ai/source_fireflies_ai/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-fireflies-ai/source_fireflies_ai/schemas/: transcripts.json
airbyte-integrations/connectors/source-fireflies-ai/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
docs/connector-development/: debugging-docker.md
docs/deploying-airbyte/: local-deployment.md  on-aws-ec2.md  on-azure-vm-cloud-shell.md  on-digitalocean-droplet.md  on-gcp-compute-engine.md  on-oci-vm.md
docs/operating-airbyte/: security.md
docs/operator-guides/: collecting-metrics.md  upgrading-airbyte.md  using-kestra-plugin.md
docusaurus/: sidebars.js
(+35 files in other folders)
